--- a/force-app/main/default/lwc/commerceProductList/commerceProductList.css
+++ b/force-app/main/default/lwc/commerceProductList/commerceProductList.css
@@ -1,4 +1,10 @@
-.product-item__content:hover {
+.product-item__container {
+  height: 100%;
+  overflow: hidden;
+  border-radius: var(--lwc-borderRadiusLarge, 0.5rem);
+}
+
+.product-item__container:hover {
   box-shadow: 0px 10px 25px #e5e8e8;
   cursor: pointer;
 }
